--- a/style.css
+++ b/style.css
@@ -31,3 +31,17 @@ body {
   bottom: 0;
   right: -50px;
 }
+.jump {
+  animation: jump 0.5s;
+}
+
+@keyframes jump {
+  0% { bottom: 0; }
+  50% { bottom: 100px; }
+  100% { bottom: 0; }
+}
+
+@keyframes moveObstacle {
+  0% { right: -50px; }
+  100% { right: 100%; }
+}
